[project]
name = "hdrUtils"
version = "0.1.0"
description = "Package description for hdrUtils"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
project.authors = [
  { name = "Suhail", email = "suhailece@gmail.com" },
]


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/hdrutils",
]
